--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,23 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 
-<%= yield %>
+	<div id="banner">
+		<%= image_tag("logo.png") %>
+		<%= @page_title || "Pragmatic Bookshelf" %>
+	</div> 
+	<div id="columns">
+		<div id="side">
+			<ul>
+				<li><a href="http://localhost:3000/">Home</a></li>
+				<li><a href="http://localhost:3000/faq">Questions</a></li>
+				<li><a href="http://localhost:3000/news">News</a></li>
+				<li><a href="http://localhost:3000/contact">Contact</a></li>
+			</ul>
+		</div>
+		<div id="main">
+			<%= yield %>
+		</div>
+	</div>
 
 </body>
 </html>
