--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
 	</div> 
 	<div id="columns">
 		<div id="side">
+			<% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+						<%= render @cart  %>
+				<% end %>
+			<% end %>
+			
+
 			<ul>
 				<li><a href="http://localhost:3000/">Home</a></li>
 				<li><a href="http://localhost:3000/faq">Questions</a></li>
